[package]
name = "simple-qsim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argmin = "0.10.0"
argmin-math = { version = "0.4", features = ["nalgebra_latest"] }
nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"
num-complex = "0.4.6"
plotters = "0.3.7"
rand = "0.9.1"
rand_distr = "0.5.1"
